--- a/client/src/pages/Auth/Register.module.scss
+++ b/client/src/pages/Auth/Register.module.scss
@@ -85,7 +85,9 @@
   width: 100%;
   min-height: 20px;
   padding: 5px;
-  margin: 10px ;
+  margin-top: 10px ;
+  margin-bottom: -10px ;
+
 }
 
 .formRadiobar{
@@ -136,6 +138,8 @@
     line-height: normal;
     background-color: white;
     color: $inputColor;
+  }
+  div {
   }
 }
 
