--- a/client/src/pages/ContestsPage/ContestPage.module.scss
+++ b/client/src/pages/ContestsPage/ContestPage.module.scss
@@ -35,3 +35,15 @@
     z-index: 100;
   }
 }
+
+.link{
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: $headerColor;
+  padding: 0 5px 0 30px;
+  &:hover{
+    color: $headerHoveredColor;
+    text-decoration: none;
+  }
+}
