--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.scss
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.scss
@@ -1,4 +1,5 @@
 @import "../../sass/mixins";
+@import "../../sass/variables";
 
 
 .contests{
@@ -32,6 +33,27 @@
     color: white;
     background-color: #28D2D1;
   }
+}
+
+@mixin link{
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: $headerColor;
+
+  &:hover{
+    color: $headerHoveredColor;
+    text-decoration: none;
+  }
+}
+
+.link {
+  @include link;
+}
+
+.filter {
+  @include link;
+  color: $lightGreenTheme;
 }
 
 .loader {
