--- a/client/src/components/SingleEntry/SingleEntry.module.scss
+++ b/client/src/components/SingleEntry/SingleEntry.module.scss
@@ -1,38 +1,56 @@
 @import "../../sass/variables";
 @import "../../sass/mixins";
 
-.entry{
-  border: grey solid 2px;
-  width: 100%;
-  height: 40%;
+.container{
+  @include flex-col-around-start;
+  width: 240px;
+  min-width: 240px;
+  height: 150px;
+  border-radius: 3px;
+  margin: 20px 10px 0 10px;
   padding: 15px;
-  position: relative;
-  font-family: Raleway-light, sans-serif;
-  h5{
-    color: $cardColor;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 17.5px;
-  }
-  p{
-    font-size: 15px;
-    line-height: 21px;
-    opacity: .7;
-  }
-  &__edit{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 12px 40px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  -webkit-box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
+  &__acceptButton{
     @include flex-row-center-center;
+    width: 30px;
     i{
-      margin-right: 5px;
+      color: green;
     }
-    color: $snapshotHeadColor;
-    border-radius: 2px;
-    border: 2px solid $snapshotHeadColor;
-    z-index: 100;
   }
+  &__rejectButton{
+    @include flex-row-center-center;
+    width: 30px;
+    i{
+      color: red;
+    }
+  }
+  &__likeButtonRed{
+    @include flex-row-center-center;
+    width: 30px;
+    i{
+      color: red;
+    }
+  }
+  &__likeButtonPurple{
+    @include flex-row-center-center;
+    width: 30px;
+    i{
+      color: purple;
+    }
+  }
+  i{
+    cursor: pointer;
+    transition: all 0.3s ease;
+    &:hover{
+      font-size: 25px;
+    }
+  }
+}
+
+.menuGroup{
+  @include flex-row-between-center;
+  width: 100%;
+  height: 30px
 }
