--- a/client/src/sass/variables.scss
+++ b/client/src/sass/variables.scss
@@ -20,3 +20,6 @@ $profileBackground: #455A89;
 $snapshotBackground: #F9FAFB;
 $snapshotHeadColor: #465A89;
 $snapshotDarkColor: #4c4e4c;
+$sideMenuColor: #cedce4;
+
+
