--- a/client/src/pages/ContestType/contestType.module.scss
+++ b/client/src/pages/ContestType/contestType.module.scss
@@ -35,6 +35,27 @@
   margin-top: 15px;
 }
 
+@mixin input{
+  width: 550px;
+  padding-bottom: 11.5px;
+  input{
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    border-color: black;
+    border-width: 0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    background-color: white;
+    color: $inputColor;
+  }
+}
+
+.inputDefault{
+  @include input;
+}
+
 .form-control {
   display: block;
   width: 100%;
@@ -67,7 +88,6 @@
   color: red;
   min-height: 20px;
   padding: 5px;
-  margin: 10px 15px;
 }
 
 .loader {
