--- a/client/src/components/ContestPreview/ContestPreview.module.scss
+++ b/client/src/components/ContestPreview/ContestPreview.module.scss
@@ -4,11 +4,18 @@
 .container{
   width: 100%;
   height: 250px;
-  background-color: $snapshotBackground;
+  background-color: white;
   color: $headerTopMenuColor;
   padding: 30px 20px 20px 20px;
   max-width: 1100px;
   margin-bottom: 20px;
+  -webkit-box-shadow: 0px 1px 28px -8px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 1px 28px -8px rgba(0,0,0,0.75);
+  box-shadow: 0px 1px 28px -8px rgba(0,0,0,0.75);
+  &:hover{
+    background-color: #F7F7F7;
+    cursor: pointer;
+  }
   @include flex-row-center-center;
   &__content{
     @include flex-col-start-start;
