--- a/client/src/pages/ContestsPage/ContestPage.module.scss
+++ b/client/src/pages/ContestsPage/ContestPage.module.scss
@@ -6,10 +6,14 @@
   width: 100%;
   height: 150px;
   background-color: $profileBackground;
+
 }
 
 .fullHeight{
   height: 100%;
+  background-color: #FAFBFE;
+
+
 }
 
 .clearRight{
@@ -37,17 +41,24 @@
   margin-top: 20px;
 }
 
-.contestContainer{
+.contestContainer {
 
   width: 100%;
   max-width: 1100px;
   padding: 20px;
   background-color: white;
-  box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px 3px rgba(0,0,0,0.1)
+
+}
+.sidebarContainer{
+  width: 100%;
+  max-width: 1100px;
+  background-color: #FAFBFE;
+  margin-left: 40px;
 }
 
 .brief{
-  background-color: $snapshotBackground;
+  background-color: white;
   padding: 30px;
   position: relative;
   &__thin{
@@ -93,6 +104,7 @@
 
 .entryContainer{
   @include flex-row-start-center;
+  margin-top: 10px;
   flex-wrap: wrap;
 }
 
@@ -106,5 +118,33 @@
     i{
       color: green;
     }
+  }
+}
+
+.button{
+  color: #28D2D1;
+  border: 2px solid #28D2D1;
+  border-radius: 5px;
+  height: 44px;
+  width: 160px;
+  margin-left: 30px;
+  cursor: pointer;
+  &__link{
+    @include flex-row-center-center;
+    color: inherit;
+    font-family: Raleway, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 100%;
+    width: 100%;
+    &:hover{
+      color: inherit;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+  &:hover{
+    color: white;
+    background-color: #28D2D1;
   }
 }
