--- a/client/src/pages/ContestsPage/ContestPage.module.scss
+++ b/client/src/pages/ContestsPage/ContestPage.module.scss
@@ -59,8 +59,8 @@
 
 .brief{
   background-color: white;
-  padding: 30px;
   position: relative;
+  padding-top: 10px;
   &__thin{
     @include flex-col-start-start;
     width: 30%;
@@ -88,7 +88,6 @@
   }
 }
 
-
 .link{
   font-family: Raleway, sans-serif;
   font-size: 18px;
@@ -104,7 +103,7 @@
 
 .entryContainer{
   @include flex-row-start-center;
-  margin-top: 10px;
+  padding: 15px;
   flex-wrap: wrap;
 }
 
