--- a/client/src/components/CreativeDashboard/CreativeDashboard.module.scss
+++ b/client/src/components/CreativeDashboard/CreativeDashboard.module.scss
@@ -27,6 +27,7 @@
     &:hover{
       color: inherit;
       text-decoration: none;
+      cursor: pointer;
     }
   }
   &:hover{
@@ -49,11 +50,19 @@
 
 .link {
   @include link;
+  width: 170px;
+  &:hover{
+    cursor: pointer;
+  }
 }
 
 .filter {
   @include link;
   color: $lightGreenTheme;
+  width: 200px;
+  &:hover{
+    cursor: pointer;
+  }
 }
 
 .loader {
