--- a/client/src/pages/Checkout/Checkout.module.sass
+++ b/client/src/pages/Checkout/Checkout.module.sass
@@ -69,13 +69,11 @@
             font-size: 22px
             font-weight: 500
 .error
-  border: 1px solid red
   width: 200px
-  font-size: 18px
-  font-weight: 600
+  font-size: 14px
   min-height: 20px
-  padding: 5px
-  margin: 0 0 0 15px
+  color: red
+
 .paymentBtn
   font-size: 20px
   color: white
