--- a/client/src/components/SingleEntry/SingleEntry.module.scss
+++ b/client/src/components/SingleEntry/SingleEntry.module.scss
@@ -12,10 +12,10 @@
   @include flex-col-around-start;
   width: 100%;
   min-width: 240px;
-  height: 150px;
+  height: 260px;
   border-radius: 3px;
   margin: 20px 10px 0 10px;
-  padding: 15px;
+  padding-left: 15px;
   -webkit-box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
   box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
@@ -70,12 +70,13 @@
 .menuGroup{
   @include flex-row-between-center;
   width: 100%;
-  height: 30px
+  height: 30px;
+  padding-right: 15px;
 }
 
 
 .imgPreview{
   height: 100px;
   width: auto;
-  padding: 20px;
+  padding: 10px;
 }
