ebu**iy infinity scroll

--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.scss
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.scss
@@ -1,7 +1,9 @@
 @import "../../sass/mixins";
 @import "../../sass/variables";
 
-
+body {
+  overflow: hidden;
+}
 .contests{
   background-color: white;
   margin-top: 20px;
